# FTC_INDI

./: .gitignore  Readme.md  pyproject.toml  setup.py
data_analisys/: __init__.py  base_extractor.py  dataset_extractor.py  paths_extractor.py
docker/: Dockerfile.ftc  Dockerfile.rotors  docker-compose.yaml  entrypoint.sh
ftc/: __init__.py  allocation_att_indi.py  attitude_controller.py  base_controller.py  controller.py  filters.py  inputs.py  parameters.py  postion_controller.py  pseudo_controll_att_indi.py  run_controller.py  state.py
ftc/ffree/: __init__.py  common.py  hoverff.py
ftc/functions/: URPositionControl.py  URYawControl.py  __init__.py  poscontrol.py
ftc/indi/: __init__.py  allocation_att_indi.py  controller.py  parameters.py  pseudo_controll_att_indi.py
ftc/indi/functions/: poscontrol.py  yawcontrol.py
ftc/lqr/: att_lqr.py  calculate_lqr.py  controller.py  equilibrium_sim.py  parameters.py  poscontrol.py  position_controller.py  reduced_lqr.py  sim_lqr.py  yawcontrol.py
ftc/switch_controllers/: __init__.py  switch_controller.py
ftc/utils/: exec_rolls.py  filters.py  gen_trajectories.py  inputs.py  logger.py  rolls.py  state.py
launchers/: launchquad.launch
params/: control_parameters.json  control_parameters_indi.json  control_params_lqr.json  quad_parameters.json
scripts/: plot.py  run.py  run_INDIcontroller.py  run_LQRController.py  run_faultfree.py  run_g.py  run_lqr.py
src/ftc/ffree/: hoverff.py  pid.py
src/ftc/indi/: allocation_att_indi.py  controller.py  parameters.py
src/ftc/lqr/: att_lqr.py  controller.py  parameters.py  sim_lqr.py
src/ftc/switch_controllers/: switch_controller.py
test_path/: test_path.py
wrapper/: __init__.py  base_wrapper_ros.py  state_space.py  utils.py  wrapper_crippled.py  wrapper_ros.py
(+10 files in other folders)
