[project]
name="ftc"
version = "0.0.1"
requires-python = ">=3.9"
authors = [
    {"name" = "Erick T"}
]
classifiers = ['Programming Language :: Python :: 3']
description = "Model Based Reinforcement Learning with ROS environment"
readme = "Readme.md"
dependencies = [
    "pandas>=2.3.3",
    "gymnasium==1.1.0",
    "gym==0.26.2",
    "tensorboardX>=2.6.4",
    "rich==14.3.0",
    "tqdm==4.67.1",
    "scikit-learn==1.6.0",
    "matplotlib==3.7.5",
    "control==0.9.4",
    "rospkg >= 1.3.0"
]
[project.optional-dependencies]
runtime = [

]
dev = [
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "types-PyYAML>=6.0.0",
    "pre-commit>=3.6.0",
    "ipython>=8.17.0",
    "ipdb>=0.13.13",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/erickTornero/FTC_INDI/"
Documentation = "https://github.com/erickTornero/FTC_INDI/"
Repository = "https://github.com/erickTornero/FTC_INDI/"
Issues = "https://github.com/erickTornero/FTC_INDI/issues"

[project.scripts]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
index-url = "https://pypi.org/simple"
[tool.uv.sources]

# Hatchling configuration
[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/Readme.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ftc"]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.1.6",
    "types-pymysql>=1.1.0.20250916",
    "types-pyyaml>=6.0.0",
    "ipython"
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.17",
    "mkdocstrings[python]>=0.30.0",
]